--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@reduxjs/toolkit": "1.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "redux": "4.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
