--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@reduxjs/toolkit": "1.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0",
-    "redux": "4.1.0"
+    "react-scripts": "4.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
